<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="306dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="53dp"
        android:fontFamily="@font/poppins"
        android:text="@string/register_text_opening"

        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Welcome back, we’ll get you sorted as soon as you’re signed in." />

    <ImageView
        android:id="@+id/handysLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="186dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="187dp"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/d503e5a06cc4210b8b99fb9a562fd823_removebg_preview_1" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:drawableStart="@drawable/ic_vector__1_"
        android:drawableEnd="@drawable/ic_off"
        android:drawablePadding="8sp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="LabelFor,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        style="@style/Theme.MyApplication"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="64dp"
        android:autofillHints=""
        android:drawableStart="@drawable/login_ic_user"
        android:drawablePadding="8sp"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/login_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="?android:attr/textColorHint"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/register_now_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_in"
        android:textColor="#A13333"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/poppins"
        android:text="@string/already_a_member"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="#A13333"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_in"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="285dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/privacy_policy"
        android:textColor="#A13333"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/opening_icon_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/handysLogo"
        app:srcCompat="@drawable/ic_look_for_your_handyman_" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:contentDescription="@string/help_icon_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/help_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>